# tracing-demo

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20220623145033_user.up.sql
src/: db.rs  error.rs  main.rs
src/curd/: mod.rs  short_link.rs
src/entity/: users.rs
src/models/: short_link.rs  user.rs
src/services/: mod.rs  router.rs  short_link_service.rs  user.rs
