[package]
name = "tracing-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
dotenv = "0.15.0"
serde = { version = "1.0.138", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = [
    "json",
    "fmt",
    "env-filter",
    "local-time",
    "time"
] }
tracing-appender = "0.2.2"
axum = { version = "0.5.11", features = ["json"] }
color-eyre = "0.6.1"
anyhow = "1.0.58"
