[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
dotenv = "0.15.0"
serde = { version = "1.0.138", features = ["derive"] }
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-rustls",
    "time",
    "mysql",
] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = [
    "json",
    "fmt",
    "env-filter",
    "local-time",
    "time"
] }
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
axum = { version = "0.5.13", features = ["json","macros"] }
color-eyre = "0.6.1"
anyhow = "1.0.58"
time = { version = "0.3.11", features = ["macros"] }
validator = { version = "0.16.0", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["trace","request-id","compression-gzip"] }
tower = { version = "0.4.13", features = ["buffer","limit"] }
thiserror = "1.0.31"
serde_json = "1.0.82"
uuid = "1.1.2"
